[package]
name = "http-server-tester"
authors = ["IceyBlackTea <IceyBlackTea@outlook.com>"]
version = "1.0.3"
description = "A CLI test program for HNU Cloud Computing Lab 2."
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/LabCloudComputing/http-server-tester"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
clap = { version = "3.1.6", features = ["derive"] }
log = "0.4.16"
log4rs = "1.0.0"